--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -1469,7 +1469,7 @@
         \subsubsection{Polare an einen Kreis}
 
             \begin{Definition}
-                \paragraph{} Sei $\mathscr{C}$ ein Kreis mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die zwei Tangenten(mengen) an den Kreis, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Gerade, welche die Berührpunkte der Tangenten beinhaltet als \textbf{Polare an den Kreis $\mathscr{C}$ zum Punkt P}.
+                \paragraph{} Sei $\mathscr{C}$ ein Kreis mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die zwei Tangenten(mengen) an den Kreis, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Gerade, welche die Berührpunkte der Tangenten beinhaltet, als \textbf{Polare an den Kreis $\mathscr{C}$ zum Punkt P}.
             \end{Definition}
 
             \begin{Bemerkung}
@@ -1572,7 +1572,9 @@
 
         \subsubsection{Tangenten an eine Sphäre}
 
-            \paragraph{} Die Tangente in einem Punkt an eine Sphäre unterscheidet sich nur in einer Eigenschaft von der an einen Kreis: mehrere nicht identische Geraden berühren eine Sphäre in einem Punkt. Tatsächlich stellt diese Menge von Geraden eine \textbf{Ebene} dar:
+            \begin{Definition}
+                \paragraph{} Die Tangente in einem Punkt an eine Sphäre unterscheidet sich nur in einer Eigenschaft von der an einen Kreis: mehrere nicht identische Geraden berühren eine Sphäre in einem Punkt. Tatsächlich stellt diese Menge von Geraden eine Ebene dar: die \textbf{Tangentialebene}.
+            \end{Definition}
 
             \begin{center}
                 \definecolor{purp}{rgb}{0.5,0,0.5}
@@ -1600,11 +1602,51 @@
                 \end{tikzpicture}
             \end{center}
 
+            \begin{Theorem}[- Tangentialebene]
+                \paragraph{} Für die Tangentialebene an eine Sphäre $\mathscr{C}$, mit Mittelpunkt $M$ und Radius $r$, in einem Punkt $P$ gilt:
+                                                    $$|\vv{MP}| = r$$
+            \end{Theorem}
 
+        \subsubsection{Polarebene?}
 
+            \begin{Definition}
+                \paragraph{} Sei $\mathscr{C}$ eine Sphäre mit Mittelpunkt $M$ und $P$ ein Punkt mit $|\vv{MP}| \nleq r$. Des Weiteren seien die überabzählbar vielen Tangenten(mengen) an $\mathscr{C}$, die durch den Punkt $P$ gehen, gegeben. Dann bezeichnet man die Ebene, welche die Berührpunkte der Tangenten beinhaltet, als \textbf{Polare an die Sphäre $\mathscr{C}$ zum Punkt P}.
+            \end{Definition}
 
+            \begin{center}
+                \definecolor{purp}{rgb}{0.5,0,0.5}
+                \definecolor{lightblue}{rgb}{0,0.7,0.7}
+                \begin{tikzpicture}[>=triangle 45]
+                    \shade[ball color=lightblue,opacity=0.3] (0,0,0) circle (5cm);
+                    \draw[line width=0.8pt,dashed] (-5,0,0) arc (180:0:5cm and 2.5cm);
+                    \draw[line width=0.8pt,dashed] (0,5,0) arc (90:-90:2.5cm and 5cm);
+                    \draw[line width=0.8pt] (7.071,0,-7.071) -- (3.5355,0,-3.5355);
+                    \draw[line width=0.8pt,dashed] (3.5355,0,-3.5355) -- (0,0,0);
+                    \draw[line width=0.8pt] (7.071,0,-7.071) -- (2.7105,1.175,-3.5355);
+                    \draw[line width=0.8pt,dashed] (2.7105,1.175,-3.5355) -- (-1.65,2.35,0);
+                    \shade[top color=blue!40!white,opacity=0.75] (0,5,0) arc (90:-90:1.9cm and 5cm) -- (7.071,0,-7.071) -- cycle;
+                    \shade[top color=blue!40!white,opacity=0.75] (0,5,0) arc (90:-270:1.9cm and 5cm);
+                    \shade[top color=blue!40!white,opacity=0.75] (0,5,0) arc (90:-270:1.9cm and 5cm);
+                    \draw[line width=0.8pt] (-5,0,0) arc (180:360:5cm and 2.5cm);
+                    \draw[line width=0.8pt] (0,5,0) arc (90:270:2.5cm and 5cm);
+                    \draw[line width=0.8pt] (0,0,0) circle (5cm);
+                    \draw[line width=0.8pt] (4,4,0) node {$\mathscr{C}$};
+                    \draw[line width=0.8pt,color=purp] (-0.3,0.3,0) node {$M$};
+                    \draw[line width=0.8pt,color=purp,fill=purp] (0,0,0) circle (2pt);
+                    \draw[line width=0.8pt,color=purp] (1.3,1.6,1.4435) node {$r$};
+                    \draw[->,line width=0.8pt,color=purp] (0,0,0) -- (2.887,2.887,2.887);
+                    %\draw[line width=0.8pt,color=purp] (3.2,3.2,3.2) node {$P$};
+                    \draw[line width=0.8pt,color=blue] (0,5,0) arc (90:-90:1.9cm and 5cm);
+                    \draw[line width=0.8pt,color=blue,dashed] (0,5,0) arc (90:270:1.9cm and 5cm);
+                    \draw[line width=0.8pt] (7.271,0.2,-7.071) node {$P$};
+                    \draw[line width=0.8pt] (7.071,0,-7.071) -- (1.65,-2.35,0);
+                    \draw[line width=0.8pt] (7.071,0,-7.071) -- (1.55562,3.9,-1.55562);
+                    \draw[line width=0.8pt,dashed] (1.55562,3.9,-1.55562) -- (0,5,0);
+                    \draw[line width=0.8pt] (7.071,0,-7.071) -- (3.5355,-2.5,-3.5355);
+                    \draw[line width=0.8pt,dashed] (3.5355,-2.5,-3.5355) -- (0,-5,0);
 
-
+                \end{tikzpicture}
+            \end{center}
 
 
 \section{Sätze}
