Überabzählbar gro?e Mengen

--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -324,7 +324,7 @@ f'' & \qquad \qquad &&& N & E & W \\
 \subsection{Funktionseinordnung}
 
 \begin{Definition}
-Jede Funktion $f$ bildet auf verschiedene Weise eine Definitionsmenge $D_{f}$ auf eine Wertmenge $W_{f}$ ab. \\Hat eine Menge $G$ eine größere Mächtigkeit (notiert $|G|$) als $K$, dann besitzt $G$ mehr Elemente als $K$, auch wenn beide überabzählbar unendlich groß sind. \\\\
+Jede Funktion $f$ bildet auf verschiedene Weise eine Definitionsmenge $D_{f}$ auf eine Wertmenge $W_{f}$ ab. \\Hat eine Menge $G$ eine größere Mächtigkeit (notiert $|G|$) als $K$, dann besitzt $G$ mehr Elemente als $K$. Dies gilt eigentlich nicht für überabzählbar unendlich große Mengen, diese sind theoretisch alle gleich groß (unendlich groß!).\\\\
 Eine Funktion $f$ ist ...
 \begin{description}
 \item[$\bullet$] \textbf{surjektiv}, wenn sie jedes Element der Zielmenge mindestens einmal als Funktionswert annimmt. Das heißt, jedes Element der Zielmenge hat mindestens ein Urbild.\\\\
