--- a/kap5/saetze.tex
+++ b/kap5/saetze.tex
@@ -255,10 +255,10 @@
   test
 \end{Beweis}
 
-\subsection{Der Satz des Apollinius}
+\subsection{Der Satz des Apollonios}
 \begin{Theorem}
   \begin{minipage}[t]{0.5\textwidth}
-    Gegeben sind: Eine Strecke $[AB]$ und eine positive Zahl $\lambda \in \R^{+} \backslash \{1\}$. Dann ist die Punktmenge $$M_{A}=\left\{ X \left| \dfrac{\overline{AX}} {\overline{BX}}=\lambda \right\}$$ ein Kreis, den man \textbf{Kreis des Apollinius} nennt.
+    Gegeben sind: Eine Strecke $[AB]$ und eine positive Zahl $\lambda \in \R^{+} \backslash \{1\}$. Dann ist die Punktmenge $$M_{A}=\left\{ X \left| \dfrac{\overline{AX}} {\overline{BX}}=\lambda \right\}$$ ein Kreis, den man \textbf{Kreis des Apollonios} nennt.
   \end{minipage}
   \begin{minipage}[t]{0.5\textwidth}
     \center{Anschaulich:}\\
@@ -355,7 +355,7 @@
     \includegraphics[width=8cm]{kap5/Apollinius_Winkel}
   \end{minipage}
   \begin{minipage}{0.5\textwidth}
-    Die Figur und die Zusammenh"ange, die man durch den Satz des Apollinius erhalten hat, kann man benutzen, um ein wenig mit Winkeln zu spielen:
+    Die Figur und die Zusammenh"ange, die man durch den Satz des Apollonios erhalten hat, kann man benutzen, um ein wenig mit Winkeln zu spielen:
   \end{minipage}\\
   Über diese 10 Winkel lassen sich einige Beziehungen aufstellen:\\
   \begin{array}{rcccl}
