--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -296,7 +296,7 @@ Untersuchen Sie K im Intervall $[0;2\pi]$ auf gemeinsame Punkte mit der $x$-Achs
     Substitution: $y&=\sin(x)$\\
     $\Rightarrow4y^2-2y+2=0$\\
     $\stackrel{ABC-Formel}{\Rightarrow}y_{1,2}=\dfrac{2\pm\sqrt{(-2)^2-4*(-4)*2}}{-8}$\\
-    Resusbsitution:\\
+    Resubsitution:\\
     $\Rightarrow
     \left\{\begin{array}{rccl}
       \sin(x)&=\dfrac{2+\sqrt{20}}{-8}\\
