Wozu gibt es diese environments? xD

--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -12,23 +12,26 @@ Allgemeiner gilt jede Funktion, bei der die Variable im Exponenten steht als Exp
 
 
 		\section{Wiederholung: Potenzgesetze}
-Seien $a$, $b\in\R$, sowie $n$, $m\in\N$, dann gilt:
-\begin{enumerate}
-\begin{minipage}{0.5\textwidth}
-\item$a^0=1$ (für $a\neq 0$)
-\item$a^1=a$
-\item$a^n=\underbrace{a\cdot a\cdot ... \cdot a}_{n Mal}$
-\item$a^m\cdot a^n=a^{m+n}$
-\item$(a^n)^m=a^{n\cdot m}$
-\end {minipage}
-\begin{minipage}{0.5\textwidth}
-\item$a^{-n}=\dfrac{1}{a^n}$
-\item$\dfrac{a^n}{a^m}=a^{n-m}$
-\item$\left(\dfrac{a}{b}\right)^n=\dfrac{a^n}{b^n}$
-\item $a^{\frac{1}{n}}=\sqrt[n]{a}$
-\item$a^{\frac{m}{n}}=\sqrt[n]{a^m}$
-\end {minipage}
-\end{enumerate}
+\begin{Theorem}
+	Seien $a$, $b\in\R$, sowie $n$, $m\in\N$, dann gilt:
+	\begin{enumerate}
+	\begin{minipage}{0.5\textwidth}
+	\item$a^0=1$ (für $a\neq 0$)
+	\item$a^1=a$
+	\item$a^n=\underbrace{a\cdot a\cdot ... \cdot a}_{n Mal}$
+	\item$a^m\cdot a^n=a^{m+n}$
+	\item$(a^n)^m=a^{n\cdot m}$
+	\end {minipage}
+	\begin{minipage}{0.5\textwidth}
+	\item$a^{-n}=\dfrac{1}{a^n}$
+	\item$\dfrac{a^n}{a^m}=a^{n-m}$
+	\item$\left(\dfrac{a}{b}\right)^n=\dfrac{a^n}{b^n}$
+	\item $a^{\frac{1}{n}}=\sqrt[n]{a}$
+	\item$a^{\frac{m}{n}}=\sqrt[n]{a^m}$
+	\end {minipage}
+	\end{enumerate}
+\end{Theorem}
+
 
 		\section{Die Eulersche Zahl ($e$)}
 
