--- a/STYLE.sty
+++ b/STYLE.sty
@@ -1,4 +1,9 @@
+\ProvidesPackage{STYLE}
+
+
 \definecolor{titlepagecolor}{cmyk}{1,.60,0,.40}   %Blau
+\setlength{\parindent}{0em}
+\setlength{\parskip}{0em}
 
 \def\blankpage{%
       \clearpage%
