--- a/kap11/kap11.tex
+++ b/kap11/kap11.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Integrale}
 \chapterauthor{Rémy}
 
@@ -494,3 +496,4 @@ Diese sollten ohne weitere Rechtfertigung oder Beweis verwendet werden dürfen. 
 \end{align*}
 \\
 $\danger$ Definitionsmengen sind zu beachten.
+\end{document}
