--- a/kap12/kap12.tex
+++ b/kap12/kap12.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Exponentialfunktionen}
 \chapterauthor{Clara}
 
@@ -424,3 +426,4 @@ $\begin{array}{ccll}
 	\subsection{Aktivität}
 
 Quelle: Déclic 1ère?????? ich weiß nicht ob ich das noch mache
+\end{document}
