--- a/kap13/kap13.tex
+++ b/kap13/kap13.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Logarithmen}
 \chapterauthor{Clara}
 
@@ -66,3 +68,4 @@ Die zweite Potenzregel ist nur ein Sonderfall der ersten, da $\sqrt[n]{a}=a^{\fr
 
 	\subsection{Ableitungsregeln}
 	\subsection{Funktionsuntersuchungsbeispiel}
+\end{document}
