--- a/kap2/kap2.tex
+++ b/kap2/kap2.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Reihen}
 \chapterauthor{Clara}
 \begin{Definition}
@@ -130,3 +132,4 @@ s_{n}&=\sum\limits_{i=x}^{x+n-1}a_{i}\\
 &=a_{x}\cdot \dfrac{1-q^{n}}{1-q}
 \end{align*}
 \end{Beweis}
+\end{document}
