--- a/kap3/kap3.tex
+++ b/kap3/kap3.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Funktionsuntersuchung}\label{Funktionsuntersuchung}
 \chapterauthor{Bruno}
 
@@ -732,3 +734,4 @@ $\Rightarrow f_{1}' \left(-\dfrac{1}{2}\right) = \dfrac{\left(-\frac{1}{2}\right
 
 Die Tangentengleichung lautet:\\ \\
 $t(x) = -15x-4$\qquad \qquad mit \quad $D_{t}=\R$
+\end{document}
