--- a/kap4/kap4.tex
+++ b/kap4/kap4.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Trigonometrie}
 \chapterauthor{Rémy}
 
@@ -422,3 +424,4 @@ K ist außerdem zu $S$ punktsymmetrisch, denn es gilt:
   \Leftrightarrow
   2\sin(x)+2\cos(x)\sin(x)&=-1*(-2\sin(x)-2\cos(x)\sin(x))
 \end{align*}
+\end{document}
