--- a/kap5/kap5.tex
+++ b/kap5/kap5.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Vektorielle Geometrie}
 \chapterauthor{Pascal}
 \section{Vektoren}
@@ -1650,4 +1652,5 @@
 
 
 \section{Sätze}
-\input{kap5/saetze}
+\input{../kap5/saetze}
+\end{document}
