--- a/kap6/kap6.tex
+++ b/kap6/kap6.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Komplexe Zahlen}
 \chapterauthor{Pascal}
 
@@ -299,3 +301,4 @@
 				\draw[line width=0.8pt,color=black] (-3.3,2.2) node {$r = r_1 \cdot r_2$};
 			\end{tikzpicture}
 		\end{center}
+\end{document}
