--- a/kap7/kap7.tex
+++ b/kap7/kap7.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Wahrscheinlichkeitstheorie}
 \chapterauthor{Rémy}
 \begin{Bemerkung}
@@ -390,3 +392,4 @@ Daraus ergibt sich die korrekte Darstellung als Baumdiagramm:\\
   Die Ergebnisse $A$ und $B$ werden stochastisch unabhängig genannt, wenn das Eintreten $A$s die Wahrscheinlichkeit $B$s nicht verändert. Es gilt dann:
   $$P_A(B)=P(B)$$
 \end{Definition}
+\end{document}
