--- a/kap9/kap9.tex
+++ b/kap9/kap9.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Matrizen}
 \chapterauthor{Bruno}
 
@@ -103,3 +105,4 @@ $\Leftrightarrow$ $\left\vert \begin{array}{rccl}
 \end{array}\right\vert$  \qquad $\Rightarrow \mathbb{L}=\{(2t+10;t;t+5|t\in\R) \}$ \\
 
 Auch hier wird die L"osungsmenge als n-Tupel angegeben, in Abh"angigkeit eines Faktors, dessen Wertebereich in der L"osungsmenge ebenfalls angegeben werden muss.\\\\
+\end{document}
