--- a/MAIN/main.tex
+++ b/MAIN/main.tex
@@ -1,19 +1,19 @@
 \documentclass[11p,a4paper,fleqn]{report}
-
+\nonstopmode
+\usepackage[scale=.9]{helvet} % or tgheros        %Schriftart
+\usepackage{subfiles}                              %Kapitel einbinden
 \usepackage{amsmath}		                          %Matheschreibweise...
 \usepackage{amssymb}                              %...Und Symbole
 \usepackage{mathrsfs}                             %für Geogebra-Zeichnungen
 \usepackage[T1]{fontenc}
-\usepackage[margin=2cm]{geometry}	                %Seitenrand
-\usepackage{fancyhdr}	                            %Header
-%\usepackage{graphicx}	                          %Bilder einfügen
-%\usepackage{wrapfig}                              %Text um Graphiken "wickeln" (wrap)
 \usepackage[most]{tcolorbox}
 \usepackage{tikz,pgf,pgfplots}                    %Grafiken zeichnen
-\usepackage{mdframed}	                            %Box			%\begin{mdframed} 		und			%\end{mdframed}
 \usepackage{epstopdf}
 \usepackage[utf8]{inputenc}
 \usepackage[ngerman]{babel}
+\usepackage{mdframed}	                            %Box			%\begin{mdframed} 		und			%\end{mdframed}
+\usepackage{fancyhdr}	                            %Header
+\usepackage[margin=2cm]{geometry}	                %Seitenrand
 \usepackage{tabu}                                 %Bessere Tabellen
 \usepackage{esvect}                               %Schönere Vektoren
 \usepackage{listings}                             %Für Pseudocode/Code...
@@ -26,25 +26,16 @@
 \usepackage{marvosym}                             %Symbole wie Blitze und co. ...
 \usepackage{stackengine}                          %Zeichen übereinander "stapeln"
 \usepackage{epigraph}                             %Fürs Titelblatt
-%\usepackage{array}			                          %Gleichungen mit mehr als einem Zeichen in der Zeile oder Tabellen
 \usepackage{tocloft,titletoc,titlesec}            %Fürs Inhaltsverzeichnis
 \usepackage{flowfram}                              %Für die Seitenangabe
 \usepackage{nopageno}                             %Same
-
 \pgfplotsset{compat=1.14}
 \usetikzlibrary{arrows}
 %\usetikzlibrary{fit}
 
-\nonstopmode                                      %Fehler bei Kompilierung werden "leise" gestellt (sehr viel praktischer)
-
-
-
-\include{style}
-
-\usepackage[scale=.9]{helvet} % or tgheros
 \renewcommand{\familydefault}{\sfdefault}
-\setlength{\parindent}{0em}
-\setlength{\parskip}{0em}
+
+\usepackage{../STYLE}                             %STYLESHEET
 
 \begin{document}
   \include{title}
@@ -53,22 +44,21 @@
   \include{pagenumbering}
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
   %Kapitel bitte hier einbinden:
-  \include{kap1/kap1}
-  \include{kap2/kap2}
-  \include{kap3/kap3}
-  \include{kap4/kap4}
-  \include{kap12/kap12}
-  \include{kap13/kap13}
-  \include{kap11/kap11}
-  \include{kap5/kap5}
-  \include{kap6/kap6}
-  \include{kap8/kap8}
-  \include{kap7/kap7}
-  \include{kap9/kap9}
-  \include{kap10/kap10}
-
-
-  \include{kap14/kap14}
+  \subfile{../kap1/kap1}%{kap1/kap1}
+  \subfile{../kap2/kap2}
+  \subfile{../kap3/kap3}
+  \subfile{../kap4/kap4}
+  \subfile{../kap12/kap12}
+  \subfile{../kap13/kap13}
+  \subfile{../kap11/kap11}
+  \subfile{../kap5/kap5}
+  \subfile{../kap6/kap6}
+  \subfile{../kap8/kap8}
+  \subfile{../kap7/kap7}
+  \subfile{../kap9/kap9}
+  \subfile{../kap10/kap10}
+  %ANHANG: Physik
+  \subfile{../kap14/kap14}
   %und so weiter
   %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \end{document}
