--- a/kap10/kap10.tex
+++ b/kap10/kap10.tex
@@ -1,3 +1,5 @@
+\documentclass[../MAIN/main.tex]{subfiles}
+\begin{document}
 \chapter{Algorithmik}
 \chapterauthor{Rémy}
 
@@ -98,6 +100,7 @@ $\Leftrightarrow x_{n+1}=x_{n}-\dfrac{x_{n}^{2}-a}{2x_{n}}=\dfrac{x_{n}^{2}+a}{2
 Als kluger, ungefähr zutreffender Startwert gilt $x_0=\dfrac{a+1}{2}$\\
 Eine mögliche Umsetzung in Python wäre:\\
 
+
 \begin{lstlisting}[language=Python]
 	a=2															#Muss manuell angegeben werden
 	def fx(x):
@@ -117,3 +120,4 @@ Eine mögliche Umsetzung in Python wäre:\\
 		altwert=next_val(altwert)
 	print(altwert)
 \end{lstlisting}
+\end{document}
