PHYSIKK - RC - RL - RLC

--- a/MAIN/main.tex
+++ b/MAIN/main.tex
@@ -17,6 +17,7 @@
 \usepackage{tabu}                                 %Bessere Tabellen
 \usepackage{esvect}                               %Schönere Vektoren
 \usepackage{listings}                             %Für Pseudocode/Code...
+\usepackage{esdiff}				%Dérivées french style
 \usepackage{color}                                %...Und dessen Einfärbung
 \usepackage{enumitem}                             %Angepasstes enumerieren
 \usepackage{enumerate}                            %Zeichen der Enumerierung beliebig wählbar
